Mon Oct 29 05:48:52 2012  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/ostruct.rb: Add [] and []=, base on a patch by Thomas Sawyer.
	  Also accept {Open}Struct as argument to new.
	  Add #eql?, #hash & #each_pair
	  Protect new_ostruct_member

Mon Oct 29 03:20:58 2012  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Fix determinant_e [ruby-dev:46305] [Bug #7228]

Sun Oct 28 23:52:25 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb: Add tests for parsing XML encoded
	  by UTF-8 with BOM.

Sun Oct 28 23:47:09 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/source.rb: Move encoding detection code to base class.
	* lib/rexml/encoding.rb: Remove needless encoding detection code.

Sun Oct 28 21:40:13 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb: Fix a bug that UTF-8 is used
	  for UTF-16XX encoded XML that doesn't have encoding="UTF-16" in
	  XML declration.
	* test/rexml/test_document.rb: Add tests for the above change.

Sun Oct 28 21:37:34 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb: Group tests that they parse
	  UTF-16XX encoded XML that has encoding="UTF-16" in XML declaration.

Sun Oct 28 21:25:11 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/source.rb (REXML::IOSource#initialize): Reduce
	  @line_break initialize code. It should be done only in #encoding=.
	* lib/rexml/parsers/baseparser.rb: Don't set UTF-16 encoding to
	  source by encoding="UTF-16" in XML declaration because UTF-16XX
	  source encoding should be set in Source#initialize or
	  IOSource#intialize. They should handle BOM. Parser should not
	  consider about it.

Sun Oct 28 21:18:37 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb: Add tests for parsing XML encoded
	  by UTF-16 with BOM.

Sun Oct 28 19:12:11 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (iso8601_{ext,bas}_time): should not match
	  empty string.
